
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_6__ {int lock; int refcnt; } ;
struct TYPE_5__ {int lock; TYPE_2__* cur_handle; } ;
typedef TYPE_1__ LoggerState ;
typedef TYPE_2__ LoggerHandle ;


 int pthread_mutex_lock (int *) ;
 int pthread_mutex_unlock (int *) ;

LoggerHandle* logger_get_handle(LoggerState *s) {
  pthread_mutex_lock(&s->lock);
  LoggerHandle* h = s->cur_handle;
  if (h) {
    pthread_mutex_lock(&h->lock);
    h->refcnt++;
    pthread_mutex_unlock(&h->lock);
  }
  pthread_mutex_unlock(&s->lock);
  return h;
}
